fix(ingredient): Use BaseIngredient more, simplify stuff (untested)